# cities

./: .gitignore  LICENSE  README.md  pyproject.toml
accounts/: forms.py  helpers.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/static/css/: style.css
accounts/templates/: base.html
accounts/templates/accounts/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.txt  password_reset_form.html  register.html
app/: settings.py  urls.py
core/: urls.py  views.py
dashboard/: urls.py  views.py
dashboard/templates/dashboard/: home.html
